--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="play_again">Play Again</string>
     <string name="choose_color">Choose color!</string>
     <string name="choose_color_txt">Do you want white tiles or black?</string>
+    <string name="choose_color_default">You get the Black tiles.</string>
     <string name="error">Error!</string>
     <string name="error_txt">An error has occurred! Play again or go to Main Menu?</string>
 
